<resources>
    <string name="app_name">AppManager</string>
    <string name="apps_not_found">Applications not found</string>
    <string name="app_tab">Приложения</string>
    <string name="backup_tab">Копии</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Сортировка</string>
    <string name="name">Название</string>
    <string name="size">Размер</string>
    <string name="date">Дата</string>
    <string name="without">Нет</string>
</resources>
